--- a/app.html
+++ b/app.html
@@ -9,6 +9,8 @@
 <br>
 <br>
 <p id="power-usage">power_usage</p><br>
+
+<p>Power saving: <b id="power-status"></b></p>
 <button id="power-saving">power_saving</button><br><br>
 
 <button id="reset">reset</button>
